--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@
                     });
                     if (data["attendance"] === 1) {
                         $("#btn_checkin").addClass("disabled");
-                        $("#btn_checkin").html("已签到")
+                        $("#btn_checkin").html("已签到");
                     }
                     if (data["data"]["vat_invoice"].trim() === "") {
                         $("#invoice_type").html("普通发票");
@@ -187,9 +187,11 @@
         $.post("/checkin", {"id": cid}, function(data){
             $.hidePreloader();
             if (data["ret"] === 1) {
+                $("#btn_checkin").addClass("disabled");
+                $("#btn_checkin").html("已签到");
                 $.alert("签到成功，请关闭本页面")
             } else {
-                $.toast("您已签到，无需重复签到")
+                $.toast("您已签到，无需重复签到");
             }
         }, "json");
     })
