--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="/static/light7.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/light7/0.4.3/css/light7.min.css">
 </head>
 <body>
 <div class="page-group">
@@ -148,8 +148,8 @@
         </div>
     </div>
 </div>
-<script type='text/javascript' src='/static/zepto.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='/static/light7.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='https://cdn.bootcss.com/light7/0.4.3/js/light7.min.js' charset='utf-8'></script>
 <script type="text/javascript">
     var cid = -1;
     $.init();
