--- a/templates/index.html
+++ b/templates/index.html
@@ -167,6 +167,9 @@
                     if (data["attendance"] === 1) {
                         $("#btn_checkin").addClass("disabled");
                         $("#btn_checkin").html("已签到");
+                    } else {
+                        $("#btn_checkin").removeClass("disabled");
+                        $("#btn_checkin").html("签到");
                     }
                     if (data["data"]["vat_invoice"].trim() === "") {
                         $("#invoice_type").html("普通发票");
