--- a/templates/index.html
+++ b/templates/index.html
@@ -209,7 +209,7 @@
     $("#btn_checkin").on("click", function () {
         if (!$("#btn_checkin").hasClass("disabled")) {
             $.showPreloader("加载中");
-            $.post("/checkin", {"id": cid, "address": $("address").val()}, function (data) {
+            $.post("/checkin", {"id": cid, "address": $("#address").val()}, function (data) {
                 $.hidePreloader();
                 if (data["ret"] === 1) {
                     $("#btn_checkin").addClass("disabled");
