Fix button style

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,9 +9,10 @@
 <body>
 <ul class="layui-nav">
     <li class="layui-nav-item">签到名单</li>
+    <li class="layui-nav-item"><a href="/getexcel" >下载为Excel</a></li>
     <li class="layui-nav-item layui-layout-right">
         <button class="layui-btn layui-btn-normal" onclick="reset()">重置</button>
-        <span>&nbsp;&nbsp;&nbsp;</span>
+        <span>&nbsp;</span>
     </li>
 </ul>
 <div class="layui-container">
