--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>数萃报道</title>
+    <title>{{ title }}</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -13,7 +13,7 @@
 <div class="page-group">
     <div class="page page-current" id="home">
         <header class="bar bar-nav">
-            <h1 class="title">欢迎来到数萃</h1>
+            <h1 class="title">{{ prompt }}</h1>
         </header>
         <div class="content">
             <div class="list-block">
