--- a/templates/payment.html
+++ b/templates/payment.html
@@ -25,6 +25,7 @@
         <thead>
         <tr>
             <th>姓名</th>
+            <th>单位</th>
             <th>价格</th>
             <th>操作</th>
         </tr>
@@ -32,6 +33,7 @@
         <tbody>
         <tr v-for="user in users">
             <td v-text="user.stu_name"></td>
+            <td v-text="user.stu_unit"></td>
             <td v-text="user.price"></td>
             <td>
                 <button class="layui-btn" v-bind:user-name="user.stu_name" v-bind:user-id="user.id" onclick="pay(this)">
